load("@com_github_grpc_grpc//bazel:cc_grpc_library.bzl", "cc_grpc_library")
package(default_visibility = ["//visibility:public"])

cc_binary(
    name = "chunkserver",
    srcs = ["chunkserver.cc"],
    defines = ["BAZEL_BUILD"],
    deps = [
        "//src/protos/chunk_report:chunk_report_cc_grpc",
        # http_archive made this label available for binding
        "@com_github_grpc_grpc//:grpc++",
        "@com_google_absl//absl/flags:flag",
        "@com_google_absl//absl/flags:parse",
    ],
)


