load("@com_github_grpc_grpc//bazel:cc_grpc_library.bzl", "cc_grpc_library")
package(default_visibility = ["//visibility:public"])

cc_library(
    name = "client_lib",
    srcs = ["client_lib.cc"],
    hdrs = ["client_lib.h"],
    linkopts = ["-lstdc++fs"],
    deps = [
        "//src/common:types",
        "//src/protos/master:master_cc_grpc",
        "//src/protos/chunkserver:chunkserver_cc_grpc",
        "@com_github_grpc_grpc//:grpc++",
        "@com_google_absl//absl/strings",
        "@com_google_absl//absl/time",
        "@com_google_absl//absl/flags:flag",
        "@com_google_absl//absl/flags:parse",
        "@com_google_protobuf//:protobuf_lite",
    ],
)

cc_binary(
    name = "client_app",
    srcs = ["client_app.cc"],
    defines = ["BAZEL_BUILD"],
    linkopts = ["-std=c++17"],
    copts = ["-std=c++17"],
    deps = [
        ":client_lib",
        "//src/protos/chunkserver:chunkserver_cc_grpc",
        "//src/protos/master:master_cc_grpc",
        "@com_github_grpc_grpc//:grpc++",
        "@com_google_absl//absl/flags:flag",
        "@com_google_absl//absl/flags:parse",
    ],
)


