load("@rules_proto//proto:defs.bzl", "proto_library")
load("@rules_cc//cc:defs.bzl", "cc_binary", "cc_proto_library")
load("@com_github_grpc_grpc//bazel:cc_grpc_library.bzl", "cc_grpc_library")

package(default_visibility = ["//visibility:public"])

# The following three rules demonstrate the usage of the cc_grpc_library rule in
# in a mode compatible with the native proto_library and cc_proto_library rules.
proto_library(
    name = "chunkserver_proto",
    srcs = ["chunkserver.proto"],
    deps = [
        "//src/protos/common:common_proto",
    ],
)

cc_proto_library(
    name = "chunkserver_cc_proto",
    deps = [":chunkserver_proto"],
)

cc_grpc_library(
    name = "chunkserver_cc_grpc",
    srcs = [":chunkserver_proto"],
    grpc_only = True,
    deps = [":chunkserver_cc_proto"],
)

